syntax = "proto3";

package pb;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/techschool/simplebank/pb";

message BaseResponse {
    google.protobuf.Any data = 1;
}
