syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/daniel-bss/havlabs/auth/pb";

message CreateUserRequest {
    string username = 1;
    string full_name = 2;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}
